external-crates/move/crates/move-compiler/tests/move_2024/expansion/expansion/deprecate_public_friend.move
module a::m {
    public(friend) fun foo() {}
}
